--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,9 @@
 
 # Output of the go coverage tool, specifically when used with LiteIDE
 *.out
+
+# GoLand project settings
+/.idea/
+
+# Main binary, build with `go build`
+/avl-vs-rb
