--- a/.gitignore
+++ b/.gitignore
@@ -1,18 +1,3 @@
-# Binaries for programs and plugins
-*.exe
-*.exe~
-*.dll
-*.so
-*.dylib
-
-# Test binary, build with `go test -c`
-*.test
-
-# Output of the go coverage tool, specifically when used with LiteIDE
-*.out
-
-# GoLand project settings
-/.idea/
-
-# Main binary, build with `go build`
-/avl-vs-rb
+.DS_Store
+.idea
+go.sum
