--- a/.golangci.yaml
+++ b/.golangci.yaml
@@ -1,6 +1,97 @@
 linters:
-  enable-all: true
-  disable:
+  disable-all: true
+  enable:
+    - asciicheck
+    - bodyclose
+    - deadcode
+    - depguard
+    - dogsled
     - dupl
+    - errcheck
+    - errorlint
+    - exhaustive
+    - exhaustivestruct
+    - exportloopref
+    - forbidigo
     - funlen
+    - gci
     - gochecknoglobals
+    - gochecknoinits
+    - gocognit
+    - goconst
+    - gocritic
+    - gocyclo
+    - godot
+    - godox
+    - goerr113
+    - gofmt
+    - gofumpt
+    - goheader
+    - goimports
+    - golint
+    - gomnd
+    - gomodguard
+    - goprintffuncname
+    - gosec
+    - gosimple
+    - govet
+    - ineffassign
+    - interfacer
+    - lll
+    - makezero
+    - maligned
+    - misspell
+    - nakedret
+    - nestif
+    - nlreturn
+    - noctx
+    - nolintlint
+    - paralleltest
+    - prealloc
+    - predeclared
+    - rowserrcheck
+    - scopelint
+    - sqlclosecheck
+    - staticcheck
+    - structcheck
+    - stylecheck
+    - testpackage
+    - thelper
+    - tparallel
+    - typecheck
+    - unconvert
+    - unparam
+    - unused
+    - varcheck
+    - whitespace
+    - wrapcheck
+    - wsl
+
+linters-settings:
+  dupl:
+    threshold: 1000
+  funlen:
+    lines: 100
+  gocognit:
+    min-complexity: 100
+  gomnd:
+    settings:
+      mnd:
+        ignored-functions: stats.*
+  nestif:
+    min-complexity: 100
+
+issues:
+  exclude-rules:
+    - linters:
+        - gochecknoglobals
+      path: pkg/stats
+    - linters:
+        - gochecknoglobals
+      path: cmd/avl-vs-rb/global
+    - linters:
+        - gochecknoinits
+      path: cmd/avl-vs-rb/global
+    - linters:
+        - gosec
+      text: "G108: Profiling endpoint is automatically exposed on /debug/pprof"
